error/demo/src/main/java/com/example/errortranslator/ErrorTranslatorApplication.java
package com.example.errortranslator;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ErrorTranslatorApplication {

	public static void main(String[] args) {
		SpringApplication.run(ErrorTranslatorApplication.class, args);
	}

}
